--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
   <groupId>io.github.icarus</groupId>
   <artifactId>icarus-parent</artifactId>
   <version>1.0</version>
+  <packaging>pom</packaging>
 
   <properties>
     <java.version>1.8</java.version>
