--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -23,6 +22,11 @@
   <groupId>io.github.icarus</groupId>
   <artifactId>icarus-parent</artifactId>
   <version>1.0</version>
+  <modules>
+    <module>icarus-api</module>
+    <module>icarus-example</module>
+    <module>icarus-intern-runtime</module>
+  </modules>
   <packaging>pom</packaging>
 
   <properties>
