+ Update Cached Annotation

--- a/icarus-api/pom.xml
+++ b/icarus-api/pom.xml
@@ -27,4 +27,12 @@
 
   <artifactId>icarus-api</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+      <version>3.5.2</version>
+    </dependency>
+  </dependencies>
+
 </project>
