The example module now depends on the api module

--- a/icarus-example/pom.xml
+++ b/icarus-example/pom.xml
@@ -27,5 +27,12 @@
 
   <artifactId>icarus-example</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>io.github.icarus</groupId>
+      <artifactId>icarus-api</artifactId>
+      <version>1.0</version>
+    </dependency>
+  </dependencies>
 
 </project>
