--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,14 @@
   <groupId>io.github.icarus</groupId>
   <artifactId>icarus-parent</artifactId>
   <version>1.0</version>
+  <packaging>pom</packaging>
   <modules>
-    <module>icarus-api</module>
     <module>icarus-example</module>
     <module>icarus-intern-runtime</module>
     <module>icarus-abstract-cache</module>
+    <module>icarus-core</module>
   </modules>
-  <packaging>pom</packaging>
+
 
   <properties>
     <java.version>1.8</java.version>
