--- a/icarus-internal/pom.xml
+++ b/icarus-internal/pom.xml
@@ -25,7 +25,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>icarus-intern-runtime</artifactId>
+  <artifactId>icarus-internal</artifactId>
 
 
 </project>
