--- a/icarus-extension/pom.xml
+++ b/icarus-extension/pom.xml
@@ -14,26 +14,18 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <artifactId>icarus-parent</artifactId>
+    <groupId>io.github.icarus</groupId>
+    <version>1.0</version>
+  </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.github.icarus</groupId>
-  <artifactId>icarus-parent</artifactId>
-  <version>1.0</version>
-  <packaging>pom</packaging>
-  <modules>
-    <module>icarus-example</module>
-    <module>icarus-core</module>
-    <module>icarus-extension</module>
-  </modules>
+  <artifactId>icarus-extension</artifactId>
 
-
-  <properties>
-    <java.version>1.8</java.version>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
 
 </project>
