--- a/icarus-core/pom.xml
+++ b/icarus-core/pom.xml
@@ -33,6 +33,16 @@
       <artifactId>icarus-abstract-cache</artifactId>
       <version>1.0</version>
     </dependency>
+    <dependency>
+      <groupId>javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.12.1.GA</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava-base</artifactId>
+      <version>r03</version>
+    </dependency>
   </dependencies>
 
 
