--- a/icarus-extension/icarus-extension-guava/pom.xml
+++ b/icarus-extension/icarus-extension-guava/pom.xml
@@ -18,25 +18,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>icarus-parent</artifactId>
+    <artifactId>icarus-extension</artifactId>
     <groupId>io.github.icarus</groupId>
     <version>1.0</version>
   </parent>
-  <artifactId>icarus-extension</artifactId>
-  <packaging>pom</packaging>
+  <modelVersion>4.0.0</modelVersion>
 
-  <modules>
-    <module>icarus-extension-guava</module>
-    <module>icarus-extension-netty</module>
-  </modules>
-
+  <artifactId>icarus-extension-guava</artifactId>
   <dependencies>
     <dependency>
-      <groupId>io.github.icarus</groupId>
-      <artifactId>icarus-api</artifactId>
-      <version>1.0</version>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>25.0-jre</version>
     </dependency>
   </dependencies>
 
